# mini_memgraph

./: .gitignore  README.md  pyproject.toml
mini_memgraph/: __init__.py  db.py  memgraph.py  utility.py
