[tool.poetry]
name = "mini-memgraph"
version = "0.1.2"
description = "A basic wrapper to simplify interacting with a local Memgraph instance using Python."
license = "MIT"
authors = ["James Allen-Robertson <minyall@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Minyall/mini_memgraph"
packages = [{include = "mini_memgraph"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Database"
]

[tool.poetry.dependencies]
python = "^3.8"
pymgclient = "^1.3.1"
pandas = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
